added seeding migration

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "errorhandler": "^1.5.1",
     "nodemon": "^3.0.1",
     "sequelize-cli": "^6.6.2"
